force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Adjusted_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjusted_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjusted Pledge/Gift</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Adjusted Pledge/Gift)</relationshipLabel>
    <relationshipName>Review_Transactions_v2_Adj_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>