force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Adjusted_Payment_2_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjusted_Payment_2_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The adjusted payment for designation 2, payment group 1.</inlineHelpText>
    <label>Adjusted Payment 2 1</label>
    <referenceTo>ucinn_ascendv2__Payment__c</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Adjusted Payment 2 1)</relationshipLabel>
    <relationshipName>Review_Transactions_v2_Adj_Payment_2_1</relationshipName>
    <type>Lookup</type>
</CustomField>