force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Adjusted_Payment_External_ID_1_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjusted_Payment_External_ID_1_2__c</fullName>
    <inlineHelpText>The adjusted payment external ID for designation 1, payment group 2.</inlineHelpText>
    <label>Adjusted Payment External ID 1 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>