force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Adjusted_Review_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjusted_Review_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjusted Review Transaction</label>
    <referenceTo>ucinn_ascendv2__Review_Transaction_v2__c</referenceTo>
    <relationshipLabel>Adjusted Review Transactions</relationshipLabel>
    <relationshipName>Review_Transactions_v2_Adj_Review_Trans</relationshipName>
    <type>Lookup</type>
</CustomField>