force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjustment_Reason__c</fullName>
    <label>Adjustment Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amount Change</fullName>
            </value>
            <value>
                <fullName>Appeal Code Change</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Data Entry Error</fullName>
            </value>
            <value>
                <fullName>Designation Change</fullName>
            </value>
            <value>
                <fullName>Donor Request</fullName>
            </value>
            <value>
                <fullName>Expired Credit Card</fullName>
            </value>
            <value>
                <fullName>Gift Date Change</fullName>
            </value>
            <value>
                <fullName>Gift to Pledge Payment</fullName>
            </value>
            <value>
                <fullName>Gift Type Change</fullName>
            </value>
            <value>
                <fullName>Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Invalid Credit Card Number</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pledge Payment to Gift</fullName>
            </value>
            <value>
                <fullName>Recognition Change</fullName>
            </value>
            <value>
                <fullName>Unsigned Check</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
            <value>
                <fullName>Pledge Payment to Pledge Payment</fullName>
            </value>
            <value>
                <fullName>Historic Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>