force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Affiliated_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Affiliated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Affiliated Organization</description>
    <inlineHelpText>Affiliated Organization</inlineHelpText>
    <label>Affiliated Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Affiliated Organization)</relationshipLabel>
    <relationshipName>Review_Transactions_v2_Affiliated_Acct</relationshipName>
    <type>Lookup</type>
</CustomField>