force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Affiliated_Account_External_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Affiliated_Account_External_ID__c</fullName>
    <description>External ID of Affiliated Org</description>
    <inlineHelpText>External ID of Affiliated Org</inlineHelpText>
    <label>Affiliated Organization External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>