force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Authorization_Code_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Authorization_Code_2__c</fullName>
    <inlineHelpText>Authorization code for payment group 2.</inlineHelpText>
    <label>Authorization Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>