force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Average_Value_on_Date_1_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Average_Value_on_Date_1_2__c</fullName>
    <label>Average Value on Date 1 2</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>