force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Bank_Reference_Number_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Bank_Reference_Number_2__c</fullName>
    <inlineHelpText>Bank reference number for payment group 2.</inlineHelpText>
    <label>Bank Reference Number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>