force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Campaign__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appeal</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Appeal)</relationshipLabel>
    <relationshipName>Review_Transactions_v2_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>