force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Campaign_External_ID_4__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Campaign_External_ID_4__c</fullName>
    <inlineHelpText>The appeal external ID for designation 4.</inlineHelpText>
    <label>Appeal External ID 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>