force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Campaign_External_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Campaign_External_ID__c</fullName>
    <label>Appeal External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>