force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Check_Date_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Check_Date_1__c</fullName>
    <inlineHelpText>Check date for payment group 1.</inlineHelpText>
    <label>Check Date 1</label>
    <type>Date</type>
</CustomField>