force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Check_Date_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Check_Date_2__c</fullName>
    <inlineHelpText>Check date for payment group 2.</inlineHelpText>
    <label>Check Date 2</label>
    <type>Date</type>
</CustomField>