force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Check_Number_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Check_Number_1__c</fullName>
    <inlineHelpText>Check number for payment group 1.</inlineHelpText>
    <label>Check Number 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>