force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Comments_v1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Comments_v1__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>