force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Confirmation_Date__c</fullName>
    <label>Confirmation Date</label>
    <type>Date</type>
</CustomField>