force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Constituent)</relationshipLabel>
    <relationshipName>Review_Transactions_v2_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>