force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Create_Matching_Credit_Payment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Create_Matching_Credit_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in determining whether a MG should create a Matching Credit Payment on the originating pledge. Both the originating/constituent pledge should have this checkbox as true to create the Matching Credit Payment.</description>
    <inlineHelpText>Used in determining whether a MG should create a Matching Credit Payment on the originating pledge. Both the originating/constituent pledge should have this checkbox as true to create the Matching Credit Payment.</inlineHelpText>
    <label>Create Matching Credit Payment</label>
    <type>Checkbox</type>
</CustomField>