force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Credit_Card_Expiration_Date_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_Card_Expiration_Date_2__c</fullName>
    <inlineHelpText>Credit card expiration date for payment group 2.</inlineHelpText>
    <label>Credit Card Expiration Date 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>