force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Designation_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The number represents a unique designation.  This number will be used by other fields to determine which designation those fields are associated with.</inlineHelpText>
    <label>Designation 2</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Designation 2)</relationshipLabel>
    <relationshipName>Review_Transactions_v2_Designation_2</relationshipName>
    <type>Lookup</type>
</CustomField>