force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Designation_External_ID_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_External_ID_1__c</fullName>
    <inlineHelpText>The number represents a unique designation.  This number will be used by other fields to determine which designation those fields are associated with.</inlineHelpText>
    <label>Designation External ID 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>