force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Donor_External_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_External_ID__c</fullName>
    <inlineHelpText>The external system ID of either the constituent or the organization, with constituent taking precedence if the external system IDs are the same between the constituent and the organization.</inlineHelpText>
    <label>Donor External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>