force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Double_The_Donation_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Double_The_Donation_Account__c</fullName>
    <description>Identifies the Double the Donation Account to be applied for this RTV2 and overrides Double the Donation Account on Review Transaction Prefix.</description>
    <inlineHelpText>Double the Donation Account to be applied for this RTV2.</inlineHelpText>
    <label>Double The Donation Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>