force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Face_Value_1_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Face_Value_1_2__c</fullName>
    <inlineHelpText>The face value for designation 1, payment group 2.</inlineHelpText>
    <label>Face Value 1 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>