force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Face_Value_2_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Face_Value_2_1__c</fullName>
    <inlineHelpText>The face value for designation 2, payment group 1.</inlineHelpText>
    <label>Face Value 2 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>