force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Hard_and_Soft_Credit_Account_1_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_and_Soft_Credit_Account_1_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hard and Soft Credit Organization 1 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Hard and Soft Credit Organization 1 2)</relationshipLabel>
    <relationshipName>Review_Transactions_v2_HSC_Account_1_2</relationshipName>
    <type>Lookup</type>
</CustomField>