force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Hard_and_Soft_Credit_Amount_1_3__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_and_Soft_Credit_Amount_1_3__c</fullName>
    <label>Hard and Soft Credit Amount 1 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>