force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Hard_and_Soft_Credit_Contact_1_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_and_Soft_Credit_Contact_1_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hard and Soft Credit Constituent 1 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Review Transactions (v2) (Hard and Soft Credit Constituent 1 1)</relationshipLabel>
    <relationshipName>Review_Transactions_v2_HSC_Contact_1_1</relationshipName>
    <type>Lookup</type>
</CustomField>