force-app/main/default/objects/ucinn_ascendv2__Review_Transaction_v2__c/fields/ucinn_ascendv2__Hard_and_Soft_Credit_Type_1_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hard_and_Soft_Credit_Type_1_1__c</fullName>
    <inlineHelpText>The first hard/soft credit type for designation 1.</inlineHelpText>
    <label>Hard and Soft Credit Type 1 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>